# cppunit

./: .gitignore  CMakeLists.txt  Makefile  README  README.md  gamemain.cpp  item.cpp  item.h  itemtest.cpp  itemtest.h  main.cpp  player.h  playertest.cpp  playertest.h  testmain.cpp
src/: gamemain.cpp  player.cpp  playertest.cpp  playertest.h
